--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -1,7 +1,7 @@
 //----------------------------------*\
 // SCSS MIXINS
 //----------------------------------*/
-//@import 'mixins/position';
+@import 'mixins/mixins';
 //----------------------------------*\
 // CONFIG MODULES
 //----------------------------------*/
