--- a/client/css/style.css
+++ b/client/css/style.css
@@ -390,6 +390,8 @@ header {
     padding-top: 5px; }
     header .logo img {
       width: 85px; }
+    header .logo .title {
+      display: inline-block; }
   header .logout {
     float: right;
     padding-top: 30px; }
@@ -414,7 +416,9 @@ header {
     background: none;
     color: white;
     border-radius: 25px;
-    width: 150px; }
+    width: 200px;
+    margin-left: 5px;
+    margin-right: 5px; }
     .savedSearches a:hover {
       background: white;
       color: #333844;
@@ -423,42 +427,60 @@ header {
     border: 1px solid #424545;
     height: 150px;
     margin: 5px; }
+    .savedSearches .box:hover {
+      background: #333844; }
+    .savedSearches .box .currency {
+      font-size: 52px;
+      color: #00a8cc; }
+      .savedSearches .box .currency .sm_container2 {
+        line-height: .9; }
+        .savedSearches .box .currency .sm_container2 i {
+          color: white;
+          font-size: 35px; }
+    .savedSearches .box .current .sm_container {
+      height: 75px;
+      padding: 20px; }
 
 .userSearch {
   padding: 10px;
-  border: 1px solid #FFF;
-  text-align: center; }
-  .userSearch a {
-    border: 2px solid white;
-    background: none;
-    color: white;
-    border-radius: 25px;
-    width: 150px;
-    margin-top: 10px; }
-    .userSearch a:hover {
-      background: white;
-      color: #333844;
-      border: 2px solid white; }
-  .userSearch .details button {
-    border: 2px solid white;
-    background: none;
-    color: white;
-    border-radius: 25px;
-    width: 150px; }
-    .userSearch .details button:hover {
-      background: white;
-      color: #333844;
-      border: 2px solid white; }
+  text-align: center;
+  margin-bottom: 100px; }
+  .userSearch .border {
+    border: 2px solid #FFF;
+    padding: 5px;
+    margin: 0 auto;
+    text-align: center;
+    float: none;
+    max-width: 700px; }
+    .userSearch .border:hover {
+      background: #333844; }
+    .userSearch .border a {
+      border: 2px solid white;
+      background: none;
+      color: white;
+      border-radius: 25px;
+      width: 150px;
+      margin-top: 10px; }
+      .userSearch .border a:hover {
+        background: white;
+        color: #333844;
+        border: 2px solid white; }
+    .userSearch .border .details button {
+      border: 2px solid white;
+      background: none;
+      color: white;
+      border-radius: 25px;
+      width: 150px; }
+      .userSearch .border .details button:hover {
+        background: white;
+        color: #333844;
+        border: 2px solid white; }
 
 .footer {
   text-align: center;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding-top: 15px;
-  padding: 1rem;
-  background-color: #333844; }
+  background-color: #333844;
+  position: fixed;
+  bottom: 0; }
   .footer p {
     margin-top: 10px; }
     .footer p i {
