fix(responsive): making the site responsive

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -14,6 +14,8 @@
 // PARTIALS
 //----------------------------------*/
 @import 'partials/nav';
+@import 'partials/login';
+@import 'partials/register';
 @import 'partials/savedSearch';
 @import 'partials/search';
 @import 'partials/footer';
