--- a/client/css/style.css
+++ b/client/css/style.css
@@ -410,9 +410,25 @@ header {
         color: #333844;
         border: 2px solid white; }
 
+.backgroundImage { 
+   position: relative; 
+   width: 100%;
+}
+
+h3 { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+}
+
+.loginwall {
+  width: 100%;
+  height: 500px;
+}
+
 #login a {
   border: 2px solid #FFF;
-  background: none;
   color: #FFF;
   border-radius: 25px;
   width: 150px;
