--- a/client/css/charts.css
+++ b/client/css/charts.css
@@ -1,8 +1,10 @@
 div .Chart {
   position: relative;
-  top: 150px;
+  top: 120px;
   margin:6px;
   padding:6px;
+  width: 100%;
+  left: 4%;
 }
 
 .grids {
@@ -13,7 +15,7 @@ div .Chart {
   flex-direction: column;
   color: black;
   background-color: #f2f2f2;
-  margin: 30px;
+  /*margin: 30px;*/
   padding-top: 5px;
   border-radius: 10px;
 }
@@ -42,11 +44,9 @@ div .Chart {
 }
 
 .gridTitle {
-  position: fixed;
-  width: 90%;
-  height: 10%;
-  top: 15%;
-  right: 5%;
+  position: relative;
+  top:105px;
+  text-align: center;
   color:white;
   background-color: #1d2027;
 }
